# beamylabs-start

./: .gitignore  README.md  docker-compose-full-system-osx.yml  docker-compose-full-system.yml  docker-compose-no-server-osx.yml  docker-compose.yml  upgrade.sh
beamyone/: README.md
beamyone/3D-model/: Beamy one, bottom 220110.stl  Beamy one, lid 220110.stl  Beamy one, top 220110.stl  README.md
configuration/: interfaces.json  interfaces_referense.json
configuration/can/: test.dbc
configuration/human/: benchc.json
configuration_distributed/: README.md  boot  interfaces.json
docs/: README.md
examples/: .gitignore
examples/grpc/rust/beamybroker-pubsub-example/: .gitignore  Cargo.toml  README.md  build.rs
examples/grpc/rust/beamybroker-pubsub-example/src/: lib.rs
examples/grpc/rust/beamybroker-pubsub-example/src/pub_client/: main.rs
examples/grpc/rust/beamybroker-pubsub-example/src/sub_client/: main.rs
examples/grpc/rust/helper/: .gitignore  Cargo.toml  README.md  build.rs
examples/grpc/rust/helper/protos/: system_api.proto
examples/grpc/rust/helper/src/: lib.rs
examples/grpc/rust/helper/src/beamy_api/: base.rs
proto_files/: common.proto  system_api.proto  traffic_api.proto
scripts/: README.md  beamylabs-upgrade.service  beamylabs-upgrade.service.tmpl  beamylabs.service  install-service.sh  install-teknika.sh  resolve-ip.sh  trigger-upgrade.sh  upgrade.sh
scripts/contrib/: beamylabs.service
scripts/flexray/: README.txt  flexray-forward.service  flexray2ip.new  prepare-flexray-using-hostname.sh  prepare-flexray-using-mac-addr-slow.sh  (+2 more)
(+141 files in other folders)
