[package]
name = "beamy-broker-pubsub-example"
version = "0.1.0"
authors = ["Lind, Niclas <niclas.lind@volvocars.com>"]
edition = "2021"

[[bin]]
name = "sub_client"
path = "src/sub_client/main.rs"

[[bin]]
name = "pub_client"
path = "src/pub_client/main.rs"

[dependencies]
prost = "0.9.0"
tokio = { version = "1.14.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tonic = "0.6.2"

# local lib
lib-helper = { path = "../helper" }